# image2-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  setup.bat  setup.command  大模型算力平台文生图模型使用说明.md
docs/superpowers/plans/: 2026-06-24-image2-mcp-plan.md
docs/superpowers/specs/: 2026-06-24-image2-mcp-design.md
scripts/: setup.sh
src/image2_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  schemas.py  server.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_integration.py  test_schemas.py
