[project]
name = "image2-mcp"
version = "0.1.0"
description = "MCP Server for company image2 text-to-image API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.28.0",
    "httpx>=0.27.1",
    "pydantic>=2.12.0",
]

[project.scripts]
image2-mcp = "image2_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]
